@@ -6,6 +6,9 @@ Not yet released, available in our GIT repository, snapshots and future releases
 
 Enhancements:
 
+#620 Equipped the file export dialog with a vertical scrollbar when needed.
+  To better support this, the dialog was partly rearranged.
+
 #620 UI table to MS Excel exports of SQL results now offers to create additional
   sheets containing the exported SQL statements.
   This is an extension of the original implementation of feature request 620.
